# baseline-checker

./: .gitignore  Dockerfile  README.md  baseline_checker.py  baseline_report.json  core.py  docker-compose.yml  pyproject.toml  requirements.txt
reports/: report_generator.py
src/baseline_checker/: core.py  web_features.py
src/baseline_checker/scanner/: utils.py
web_app/: app.py  tasks.py
web_app/static/css/: style.css
web_app/static/js/: main.js
web_app/templates/: error.html  index.html  results.html
