[project]
name = "baseline-checker"
version = "0.1.11"
description = "A modern web compatibility scanner"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.8"
license = "MIT"

authors = [
  { name = "Veeresh Hanni", email = "veereshhanni347@gmail.com" }
]

dependencies = [
    "rich",
    "tqdm",
    "pandas",
    "python-docx",
    "reportlab",
    "fpdf",
    "colorama"
]

keywords = ["scanner", "web-compatibility", "baseline", "automation"]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/Veeresh-Hanni/baseline-checker"
Repository = "https://github.com/Veeresh-Hanni/baseline-checker/issues"


[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"baseline_checker" = ["config/*.json"]

[project.scripts]
baseline-checker = "baseline_checker.core:run"